--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#E53B3B</color>
+    <color name="blue">#3B93E5</color>
+    <color name="purple">#CD3BE5</color>
+    <color name="green">#49E53B</color>
+    <color name="popupBack">#E5D43B</color>
 </resources>
