--- a/app/src/main/res/layout/activity_two_players.xml
+++ b/app/src/main/res/layout/activity_two_players.xml
@@ -234,7 +234,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/ToCheck"
         android:layout_width="94dp"
         android:layout_height="73dp"
         android:layout_marginEnd="40dp"
