--- a/app/src/main/res/layout/activity_pop_up1.xml
+++ b/app/src/main/res/layout/activity_pop_up1.xml
@@ -6,52 +6,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/popup"
-    tools:context=".PopUp1">
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="351dp"
-        android:layout_height="77dp"
-        android:layout_marginBottom="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.335"
-        app:srcCompat="@drawable/spieleranzahl"
-        tools:ignore="ContentDescription,ImageContrastCheck" />
+    tools:context="com.example.gruppe03.PopUp1">
 
     <ImageButton
         android:id="@+id/imageButton5"
         android:layout_width="106dp"
         android:layout_height="98dp"
         android:layout_marginStart="268dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="13dp"
         android:layout_marginEnd="13dp"
-        android:layout_marginBottom="132dp"
         android:backgroundTint="#00FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageButton6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/nummer2"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:srcCompat="@drawable/nummer2" />
 
     <ImageButton
         android:id="@+id/imageButton6"
         android:layout_width="116dp"
         android:layout_height="98dp"
         android:layout_marginStart="13dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="13dp"
         android:layout_marginEnd="5dp"
-        android:layout_marginBottom="132dp"
         android:backgroundTint="#00FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageButton7"
         app:layout_constraintStart_toEndOf="@+id/imageButton5"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
         app:srcCompat="@drawable/nummer3"
         tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />
 
@@ -60,15 +40,26 @@
         android:layout_width="113dp"
         android:layout_height="98dp"
         android:layout_marginStart="13dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="13dp"
         android:layout_marginEnd="262dp"
-        android:layout_marginBottom="132dp"
         android:backgroundTint="#00FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageButton6"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
         app:srcCompat="@drawable/nummer4"
         tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="95dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="Spieleranzahl"
+        android:textColor="#EB8240"
+        android:textSize="48sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
