--- a/app/src/main/res/layout/activity_first_screen.xml
+++ b/app/src/main/res/layout/activity_first_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/img"
-    tools:context=".FirstScreenActivity">
+    tools:context="com.example.gruppe03.FirstScreenActivity">
 
     <Button
         android:id="@+id/button1"
