--- a/app/src/main/res/layout/activity_three_players.xml
+++ b/app/src/main/res/layout/activity_three_players.xml
@@ -6,14 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".ThreePlayers">
+    tools:context="com.example.gruppe03.ThreePlayers">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="94dp"
-        android:layout_marginTop="66dp"
+        android:layout_marginTop="55dp"
         android:allowUndo="false"
         android:fontFamily="sans-serif-medium"
         android:text="Spieler 3"
@@ -42,6 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="94dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="sans-serif-medium"
         android:text="Farbe:"
         android:textColor="#EB8240"
@@ -56,7 +57,7 @@
         android:layout_width="110dp"
         android:layout_height="154dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
 
@@ -108,9 +109,9 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
         android:layout_width="200dp"
-        android:layout_height="43dp"
+        android:layout_height="60dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="112dp"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -118,7 +119,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Spielername"
-            android:textSize="24sp" />
+            android:textSize="20sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <ImageButton
