--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="blue">#3B93E5</color>
     <color name="purple">#CD3BE5</color>
     <color name="green">#49E53B</color>
-    <color name="popupBack">#E5D43B</color>
+    <color name="popupBack">#FFF48C</color>
 </resources>
